# OxidizeMailChallenges

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
challenge_1/benchmarks/: benchmarks.cc
challenge_1/src/: lib.c  lib.h
challenge_1/tests/: arbitrary_array_tests.cc  int_array_tests.cc  pointer_array_tests.cc  structures.hh
